add proto definitions for delegation
